--- a/app/src/main/res/layout/fragment_meditation.xml
+++ b/app/src/main/res/layout/fragment_meditation.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.meditation.MeditationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
