--- a/app/src/main/res/layout/item_mood.xml
+++ b/app/src/main/res/layout/item_mood.xml
@@ -9,13 +9,13 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivMood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvMood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
