--- a/app/src/main/res/layout/item_pages.xml
+++ b/app/src/main/res/layout/item_pages.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/llContainer"
     android:layout_width="240dp"
     android:layout_height="wrap_content"
@@ -7,22 +7,21 @@
     android:foreground="?selectableItemBackground"
     android:orientation="vertical">
 
-
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivPages"
         android:layout_width="wrap_content"
+        android:layout_height="140dp"
         android:background="@drawable/bg_collection"
-        android:scaleType="fitXY"
-        android:layout_height="140dp" />
+        android:scaleType="fitXY" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvPageTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvPageDescription"
         android:layout_width="wrap_content"
-        android:maxLines="2"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:maxLines="2" />
+</androidx.appcompat.widget.LinearLayoutCompat>
