--- a/app/src/main/res/layout/slide_item_container.xml
+++ b/app/src/main/res/layout/slide_item_container.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     android:padding="15dp">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:textColor="@color/white"
         android:textSize="26sp"
-        android:gravity="center"
         android:textStyle="bold" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvSecondary"
         android:layout_width="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="16sp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:textColor="@color/white"
+        android:textSize="16sp" />
+</androidx.appcompat.widget.LinearLayoutCompat>
