--- a/app/src/main/res/layout/item_instrument.xml
+++ b/app/src/main/res/layout/item_instrument.xml
@@ -7,18 +7,18 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivPages"
+        android:id="@+id/ivBanner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvPageTitle"
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvPageDescription"
+        android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white" />
