--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,11 +13,12 @@
 
         <TextView
             android:id="@+id/title"
+            style="@style/PrimaryTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/main"
+            android:layout_marginTop="76dp"
+            android:text="@string/menu_profile"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,6 +45,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvLogin"
+            style="@style/SmallTextSize14"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -54,6 +56,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvEmail"
+            style="@style/StandartTextSize16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@id/ivProfilePhoto"
@@ -64,20 +67,21 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvInstagram"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/mood_background"
-            android:gravity="center_horizontal"
-            android:padding="18dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
+            android:text="@string/mentalmind_kz"
             android:textColor="@color/white"
             android:textSize="@dimen/font_normal"
             app:drawableStartCompat="@drawable/ic_instagram"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivProfilePhoto"
-            tools:text="geminmay" />
+            app:layout_constraintTop_toBottomOf="@id/ivProfilePhoto" />
 
         <LinearLayout
             android:id="@+id/llOptions"
@@ -96,6 +100,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/faq"
+                style="@style/RegularTextSize20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/txt_faq"
@@ -105,6 +110,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/help"
+                style="@style/RegularTextSize20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -116,6 +122,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/changeLanguage"
+                style="@style/RegularTextSize20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -127,6 +134,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/addPromocode"
+                style="@style/RegularTextSize20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -211,17 +219,16 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/countDay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="146dp"
+            android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/mood_background"
+            android:elevation="4dp"
             android:gravity="center"
             android:paddingStart="44dp"
-            android:paddingTop="15dp"
             android:paddingEnd="44dp"
-            android:paddingBottom="15dp"
             app:layout_constraintBottom_toBottomOf="@id/clLevelContainer"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/clLevelContainer"
             tools:text="6 дней" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -229,6 +236,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
+            android:elevation="4dp"
             android:text="@string/on_way_to_you"
             app:layout_constraintEnd_toEndOf="@id/countDay"
             app:layout_constraintStart_toStartOf="@id/countDay"
@@ -236,17 +244,16 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/countTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="146dp"
+            android:layout_height="50dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/mood_background"
+            android:elevation="4dp"
             android:gravity="center"
             android:paddingStart="44dp"
-            android:paddingTop="15dp"
             android:paddingEnd="44dp"
-            android:paddingBottom="15dp"
             app:layout_constraintBottom_toBottomOf="@id/clLevelContainer"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/clLevelContainer"
             tools:text="20 минут" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -254,6 +261,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
+            android:elevation="4dp"
             app:layout_constraintEnd_toEndOf="@id/countTime"
             app:layout_constraintStart_toStartOf="@id/countTime"
             app:layout_constraintTop_toBottomOf="@id/countTime"
@@ -275,8 +283,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/history" />
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -295,7 +301,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/txt_fav_meditations" />
-
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
